[package]
name = "null_box"
version = "0.1.0"
authors = ["Sebastian <sebjfk@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }
laminar = "0.2.3"
serde = "1.0"
crossbeam-channel = "0.3"
serde_derive = "1.0"
bincode = "1.0"
